--- a/Areas/Customer/Views/_ViewImports.cshtml
+++ b/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SpiceProject
 @using SpiceProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper SpiceProject.TagHelpers.*,SpiceProject
