--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -88,7 +88,7 @@
 
         <div class="form-group" row>
             <div class="col-2">
-                <label asp-for="Input.Password" class="form-control"></label>
+                <label asp-for="Input.Password" class="col-form-label"></label>
             </div>
             <div class="col-5">
                 <input asp-for="Input.Password" class="form-control" />
@@ -98,13 +98,29 @@
 
         <div class="form-group" row>
             <div class="col-2">
-                <label asp-for="Input.ConfirmPassword" class="form-control"></label>
+                <label asp-for="Input.ConfirmPassword" class="col-form-label"></label>
             </div>
             <div class="col-5">
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
             </div>
             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
         </div>
+
+
+        @if (User.IsInRole(SD.ManagerUser))
+        {
+            <div class="form-group row">
+                <div class="col-2">
+                </div>
+                <div class="col-5">
+                    <input type="radio" name="rdUserRole" value="@SD.KitchenUser" checked /> @SD.KitchenUser
+                    <input type="radio" name="rdUserRole" value="@SD.FrontDeskUser" checked /> @SD.FrontDeskUser
+                    <input type="radio" name="rdUserRole" value="@SD.ManagerUser" checked /> @SD.ManagerUser
+                </div>
+            </div>
+        }
+
+
 
         <div class="form-group row">
             <div class="col-5 offset-2">
